<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- sdk START -->
    <string name="register_title">注册乐视帐号</string>
    <string name="register_tip">一个帐号玩转所有乐视服务</string>
    <string name="phone_number_hint_text">请输入手机号</string>
    <string name="password_hint_text2">6&#8211;16位字母或者数字</string>
    <string name="verificationcode_dialog_title">请填写图片验证码</string>
    <string name="verificationcode_dialog_hint_text">请输入右侧图片验证码</string>
    <string name="click_send_agree">点击立即发送表示同意乐视的</string>
    <string name="register">注&#160;&#160;册</string>
    <string name="now_register">立即注册</string>
    <string name="register_password_title">密码格式为</string>
    <string name="register_password_subtitle">6&#8211;16位字母，数字或符号</string>
    <string name="countdown_get_again_text_one">如未收到短信，请</string>
    <string name="countdown_get_again_text_middle">于</string>
    <string name="countdown_get_again_text_two">S后&#160;</string>
    <string name="get_auth_coude_again">重新获取</string>
    <string name="message_register">短信注册</string>
    <string name="message_send_success">短信下发成功</string>
    <string name="message_login_authcode_title">短信验证码已发送至您的手机</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="net_no">网络连接失败，请检查您的网络</string>
    <string name="register_check_mob">该手机号已注册，请直接登录</string>
    <string name="input_right_phone_num">请输入正确的手机号码</string>
    <string name="phone_login">登&#160;&#160;录</string>
    <string name="find_password_activity_title">找回密码</string>
    <string name="find_password_tip">编辑短信6&#8211;16位密码发送至</string>
    <string name="find_password_tip2">密码格式：6&#8211;16位数字、字母或符号。暂不支持海外通道</string>
    <string name="find_password_default_phone_number">1069032901305788</string>
    <string name="find_password_send_soom">立即发送</string>
    <string name="personalinfo_title">个人信息</string>
    <string name="personalinfo_head_image">头像</string>
    <string name="personalinfo_update_head_image_failure">更新头像失败</string>
    <string name="personalinfo_head_nickname">昵称</string>
    <string name="personalinfo_head_nickname_cannot_empty">昵称不能为空</string>
    <string name="personalinfo_head_nickname_modifyrule">昵称规则为 4&#8211;32字符，支持中文，字母，下划线</string>
    <string name="personalinfo_gender">性别</string>
    <string name="personalinfo_birthday">生日</string>
    <string name="personalinfo_area">地区</string>
    <string name="personalinfo_modify_password">修改密码</string>
    <string name="personalinfo_logout">退出登录</string>
    <string name="personalinfo_find_password">找回密码</string>
    <string name="personalinfo_no_data">未填写</string>
    <string name="personalinfo_men">男</string>
    <string name="personalinfo_women">女</string>
    <string name="personalinfo_year">年</string>
    <string name="personalinfo_day">日</string>
    <string name="personalinfo_birthday_over_current_date">生日超过当前日期</string>
    <string name="bring_paramers_error">携带的参数出错</string>
    <string name="ensure">确定</string>
    <string name="input_password">请输入密码</string>
    <string name="input_right_nickname">昵称应由4&#8211;32个中文/字母/下滑线组成</string>
    <string name="input_right_password">密码应由6&#8211;16位数字/字母组成</string>
    <string name="input_right_authcode">请输入正确的激活码</string>
    <string name="input_right_verification">请输入正确的验证码</string>
    <string name="toast_auth_code">请输入验证码</string>
    <string name="seletc_from_image">从相册选择</string>
    <string name="seletc_from_camera">拍照上传</string>
    <string name="cancle">取消</string>
    <string name="public_loading_text">正在加载，请稍候&#8230;</string>
    <string name="public_loading_datanull">未获取到内容#点击页面刷新</string>
    <string name="public_loading_no_net">网络未连接#请检查网络后点击页面刷新</string>
    <string name="hot_play_error_net_null">网络不给力，请检查网络设置</string>
    <string name="try_again">刷新重试</string>
    <string name="channel_filter_no_content">暂无内容#点我重新筛选</string>
    <string name="skip">跳过</string>
    <string name="next_step">下一步</string>
    <string name="click_next_step_agree">点击下一步表示同意乐视的</string>
    <string name="service_agreement">服务条款细则及隐私政策</string>
    <string name="save">保&#160;&#160;存</string>
    <string name="register_success_to_login">注册成功</string>
    <string name="send_message_code_success">激活码下发成功</string>
    <string name="login_success">登录成功</string>
    <string name="third_part_login_tip">第三方登录用户暂无初始密码</string>
    <string name="choose_country_area_title">国家/地区</string>

    <!-- login -->
    <string name="login_activity_title">登录乐视帐号</string>
    <string name="login_number_hint_text">请输入手机号/邮箱</string>
    <string name="login_number_hintuser_text">请输入正确的手机号/邮箱</string>
    <string name="login_password_hint_text">请输入密码</string>
    <string name="login_password_hintpass_text">请输入正确的密码</string>
    <string name="login_vf_hint_text">请输入验证码</string>
    <string name="login_rightvf_hint_text">验证码错误，请重输！</string>
    <string name="vfcode_hint_text">右侧图片验证码</string>
    <string name="notevfcode_text">短信验证码登录</string>
    <string name="loginshare_activity_title">登录乐视网</string>
    <string name="input_error_hint">帐号或密码不正确，请重新输入</string>
    <string name="login_use_other_metherd">使用其他方式登录</string>
    <string name="more_account">更多账号</string>
    <string name="action_settings">Settings</string>
    <string name="customer_service_title">客服电话：</string>
    <string name="customer_service_phone">400 030 0104</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="moreaboutusactivity_webtitle">乐视网</string>
    <string name="login_weibo">新浪微博登录</string>
    <string name="login_qq">腾讯QQ登录</string>
    <string name="shortcut_nickname_dialog_title">修改昵称提示</string>
    <string name="shortcut_nickname_dialog_subtitle">您当前正使用系统默认昵称，为方便</string>
    <string name="shortcut_nickname_dialog_content">您更好的参与互动，建议修改昵称</string>
    <string name="shortcut_nickname_dialog_yesbutton">修改</string>
    <string name="login_not_install_weixin">您还没有安装微信，请先去下载微信</string>
    <string name="logout_prompt_dialog_title">退出账号后将无法同步个人信息，</string>
    <string name="logout_prompt_dialog_content">是否确认退出</string>
    <string name="logout_prompt_dialog_yesbutton">退出</string>
    <string name="nicknamechange_prompt_dialog_title">当前昵称已经被修改</string>
    <string name="nicknamechange_prompt_dialog_content">是否保存该修改</string>
    <string name="nicknamechange_prompt_dialog_yesbutton">保存</string>
    <string name="account_freeze_prompt_dialog_title">您的账号已经被冻结</string>
    <string name="account_freeze_prompt_dialog_content">请点击解冻，重置密码后登录</string>
    <string name="account_freeze_prompt_dialog_Yesbutton">解冻</string>
    <string name="account_token_failure_dialog_title">当前账号已过期，请选择其他账号</string>
    <string name="account_token_failure_dialog_content">登录或重新输入账号密码</string>
    <string name="account_token_failure_dialog_Yesbutton">重新登录</string>
    <string name="account_type" translatable="false">com.letv.LoginSDKAccount</string>
    <string name="account_label">乐视账号</string>

</resources>