<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="160dp"
    android:background="@color/letv_color_0f000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/letv_color_ffffffff"
        android:minHeight="160dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/letv_color_ffdfdfdf" />

        <TextView
            android:id="@+id/select_from_image_tv"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/seletc_from_image"
            android:textColor="@color/letv_color_99000000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/letv_color_ffdfdfdf" />

        <TextView
            android:id="@+id/select_from_camera_tv"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/seletc_from_camera"
            android:textColor="@color/letv_color_99000000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/letv_color_ffdfdfdf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/letv_color_ffdfdfdf" />

        <TextView
            android:id="@+id/cancle_tv"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="#ff3333"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>