<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/letv_color_fffafafa"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp" >

        <ImageView
            android:id="@+id/btn_back_ModifyNicknameActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/back_selecter" />

        <TextView
            android:id="@+id/title"
            style="@style/letv_text_18sp_ff444444"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/personalinfo_title" />

        <TextView
            android:id="@+id/save_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:enabled="false"
            android:text="@string/nicknamechange_prompt_dialog_yesbutton"
            android:textColor="@color/letv_color_00a0e9"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@color/letv_color_ffdfdfdf" />

    <RelativeLayout
        android:id="@+id/modify_password_layout"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/letv_color_ffffffff" >

        <com.letv.loginsdk.view.ClearEditText
            android:id="@+id/nick_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:singleLine="true"
            android:maxLength="32"
            android:textColor="@color/letv_color_333333"
            android:textCursorDrawable="@drawable/cursor_color" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/letv_color_ffdfdfdf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        android:text="@string/personalinfo_head_nickname_modifyrule"
        android:textColor="@color/letv_color_999999"
        android:textSize="15sp" />

</LinearLayout>